--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: BloxTech Applications • Changelog #(required)
 
 # Website Description for search engines (optional)
-description: "Keep yourself up to date with new features at BloxTech Applications"
+description: "Keep yourself up to date with new features and other updates at BloxTech Applications"
 
 # replace this word in navigation bar. Ex: Productnews, ChangeLog, Updates
 heading: BloxTech Applications • Changelog # (optional)
